# readme-update

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
python/update_readme/: __main__.py
scripts/: example1.py  example2.py  example3.py  example_usage.py
src/: api.rs  lib.rs
src/core/: adapters.rs  domain.rs  mod.rs
tests/: integration_tests.rs
